--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,7 @@ nav
 
 #poke-img
 {
-    width: 150px;
+    width: 300px;
 }
 
 .skills{
@@ -35,6 +35,24 @@ nav
 }
 
 .tombol-liat{
+    background-color: white;
+    color: #7952b3;
+    font-weight: bold;
+    border: #7952b3 solid 2px;
+}
+
+#berat-text {
+    color: #7952b3;
+    font-weight: bold;
+}
+
+#poke-name-detail{
+    color: #7952b3;
+    font-weight: bold;
+}
+
+.tombol-close
+{
     background-color: white;
     color: #7952b3;
     font-weight: bold;
